--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@
 .jumbotron-fluid{
     width: 100%;
     height: 70vh;
-    background-image: url("../img/set-of-simple-smart-phone-tablet-pc-laptop-desktop-pc-vector.png");
+    background-image: url("set-of-simple-smart-phone-tablet-pc-laptop-desktop-pc-vector.png");
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
